--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
     "@covalent/tokens": "^8.23.2",
     "@types/fhir": "^0.0.41",
     "fhirclient": "^2.5.4",
+    "monaco-editor": "^0.44.0",
+    "ngx-monaco-editor-v2": "^17.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.3.6",
+    "@angular-builders/custom-webpack": "^17.0.2",
+    "@angular-devkit/build-angular": "^17.3.11",
     "@angular/cli": "^17.3.6",
     "@angular/compiler-cli": "^17.3.0",
     "@types/jasmine": "~5.1.0",
@@ -43,6 +46,9 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.4.2"
+    "typescript": "~5.4.2",
+    "dotenv-webpack": "^8.0.1",
+    "path-browserify": "^1.0.1",
+    "webpack": "^5.89.0"
   }
 }
